# EMR2

./: .gitignore  CMakeLists.txt  README.md  ROS2_CheatSheet.txt  package.xml
gazebo_worlds/: aruco1  woodencube01
install/: Important ros2 commands.txt  README.md  Realsense detect Aruco.md  increase_swap.sh  step1_Install_ROS2_Hawskbill.sh  step1_Install_ROS2_Jazzy.sh  step2_Install_UR_GZ_Jazzy.sh  step2_Install_UR_Gazebo.sh  step3_Install_Moveit2_Tutorials.sh  step3_Install_Moveit2_Tutorials_Jazzy.sh  step4_robotiq_gripper.sh  ur140.srdf  ur_macro.srdf.xacro (for robotiq 140 gripper)  ur_macro.srdf.xacro (for robotiq85 gripper)  ur_mit_cam.urdf.xacro  ur_sim_control_mit_depthcam.launch.py
install/Octomap/: READ.ME
install/gazebo depthcam/: read.me  sensors_3d.yaml  ur_mit_depthcam.urdf.xacro  ur_moveit.launch.py  ur_sim_control_mit_cam.launch.py  ur_sim_moveit_mit_depthcam.launch.py
install/log/: latest_mixin
install/octomap/: read.me  sensors_3d.yaml  ur_moveit.launch.py
install/robotiq_85_gripper_changed_files/: moveit_controllers.yaml  ur_macro.xacro
launch/: hello_moveit_ur_launch.py  multisim.launch.py  octomap_server.launch.py  turtlesim_taste.launch.py  turtlesim_teleop.launch.py
launch/my_first_launch/: my_first_launch_file.launch.py  my_first_launch_file2.launch.py  my_first_launch_file3.launch.py  my_first_launch_file4.launch.py  my_first_launch_file5.launch.py  my_first_launch_file6.launch.py  my_first_launch_file7.launch.py  my_first_launch_file8.launch.py
meshes/: kinect2_assembly.STL
micro_ros_arduino/micro-ros_publisher_VL53L0X/: micro-ros_publisher_VL53L0X.ino
models/: ur3e_aruco.sdf
rqt/: emr2#1.perspective
scripts/: open_cv_python_sw01_first_test.py
src/: hello_moveit_ur.cpp  hello_moveit_ur_gazebo.cpp  hello_moveit_ur_realbot.cpp  minimal_publisher.cpp  minimal_subscriber.cpp  moveit_ur_gazebo_scene.cpp  open_cv_cpp_sw00_hello_world.cpp  open_cv_cpp_sw01_read_camera.cpp  open_cv_cpp_sw02_track_object.cpp  talkerNode.cpp  tf_broadcaster.cpp  turtlesim_catcher.cpp  turtlesim_follower.cpp  turtlesim_follower_old.cpp  turtlesim_taste.cpp
worlds/: simple_world.sdf
worlds/ground/: ground.sdf  model.config
worlds/panda_gz_sim/: panda.sdf
